--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 <body>
     <div id="container">
     <form >
-    <input type="text" />
-    <br>
-    <input type="text" />
+    <input type="text" list="source"/>
+    <datalist id="source">
+        
+      </datalist>
+      <br>
+      <input type="text" list="to"/>
+      <datalist id="to">
+        </datalist>
     <br>
     <button type="button" id="submit">Submit</button>
     </form>
     <br>
-    <!-- <div id="container1">
-        <span>S M T W TH F S</span>
-        <span class="time">12:30-1:30</span>
-        <p class="train">Train name</p>
-    </div> -->
     </div>
     <script src="index.js"></script>
 </body>
