--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <body>
     <div id="container">
     <form >
-    <input type="text" list="source"/>
+    <input type="text" list="source" id="sourcestation"/>
     <datalist id="source">
         
       </datalist>
       <br>
-      <input type="text" list="to"/>
+      <input type="text" list="to" id="tostation"/>
       <datalist id="to">
         </datalist>
     <br>
