--- a/index.html
+++ b/index.html
@@ -2,24 +2,25 @@
 <html>
 <head>
     <title>Trains between stations</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="container">
-    <form >
-    <input type="text" list="source" id="sourcestation"/>
-    <datalist id="source">
-        
-      </datalist>
-      <br>
-      <input type="text" list="to" id="tostation"/>
-      <datalist id="to">
-        </datalist>
-    <br>
-    <button type="button" id="submit">Submit</button>
-    </form>
-    <br>
+    <h1>Trains between stations</h1>
+    <div id="outer">
+    <div id="inner">
+        <div class="row g-4" id="container">
+          <div><input type="text" class="form-control" placeholder="From" aria-label="First name" list="source" id="sourcestation"></div>
+            <datalist id="source"></datalist>
+          <div><input type="text" class="form-control" list="to" id="tostation" placeholder="To" aria-label="Last name"></div>
+            <datalist id="to"></datalist>
+        </div>
+        <div style="margin-top: 1rem;"><button class="btn btn-primary" type="submit" id="submit">Get trains</button></div>
     </div>
-    <script src="index.js"></script>
+    </div>
+  <script src="index.js"></script>
 </body>
 </html>
